Correction Z-Index burger menu, création page RecipieValues.d.ts

--- a/client/src/styles/HamburgerMenu.css
+++ b/client/src/styles/HamburgerMenu.css
@@ -17,7 +17,7 @@
   color: aliceblue;
   background-color: var(--primary-color);
   border-radius: 0 0 20px;
-  z-index: 998;
+  z-index: 1;
 }
 
 /* croix */
